Updates Backedn using encapsulation

--- a/notebooks/facerecognition.ipynb
+++ b/notebooks/facerecognition.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -78,6 +85,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save Encodings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -86,6 +100,13 @@
     "file = open('face_Encodings.p', 'wb')\n",
     "pickle.dump(encodedListKnownWithNames, file)\n",
     "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inferencing"
    ]
   },
   {
@@ -187,15 +208,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -215,81 +227,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_folder = identified[\"base_folder\"]\n",
-    "names = [os.path.join(base_folder, folder_name) for folder_name in identified if folder_name != 'base_folder']\n",
-    "\n",
-    "\n",
-    "\n",
-    "for name in names:\n",
-    "    for file_name in :\n",
-    "        # identified[name] = [os.path.join(base_folder, name, file_name) for file_name in identified[name]]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['../web_interface/API/static\\\\faces\\\\2023_10_31__22_36_37\\\\Akesh',\n",
-       " '../web_interface/API/static\\\\faces\\\\2023_10_31__22_36_37\\\\sumal',\n",
-       " '../web_interface/API/static\\\\faces\\\\2023_10_31__22_36_37\\\\Unknown_0',\n",
-       " '../web_interface/API/static\\\\faces\\\\2023_10_31__22_36_37\\\\Unknown_1']"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video_writer = cv2.VideoWriter(\"output_file_path.mp4\",   -1 , 20, (20, 20), True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "< cv2.VideoWriter 000001B3F2208870>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "video_writer\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
