--- a/notebooks/ConvLSTM.ipynb
+++ b/notebooks/ConvLSTM.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import cv2\n",
-    "import pafy\n",
+    "# import pafy\n",
     "import math\n",
     "import random\n",
     "import numpy as np\n",
@@ -17,17 +17,34 @@
     "from collections import deque\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from moviepy.editor import *\n",
+    "# from moviepy.editor import *\n",
     "%matplotlib inline\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.metrics import confusion_matrix\n",
     "\n",
     "from tensorflow.keras.layers import *\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "from tensorflow.keras.utils import plot_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num GPUs Available:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Num GPUs Available: \", len(tf.config.list_physical_devices('GPU')))\n"
    ]
   },
   {
@@ -652,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4
  },
