--- a/notebooks/poseDitection.ipynb
+++ b/notebooks/poseDitection.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mediapipe'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mf:\\CS3501-Data_Science_and_Engineering_Project\\Project Files\\Human-Action-Recognition-in-the-dark\\notebooks\\poseDitection.ipynb Cell 1\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/CS3501-Data_Science_and_Engineering_Project/Project%20Files/Human-Action-Recognition-in-the-dark/notebooks/poseDitection.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtensorflow_hub\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mhub\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/CS3501-Data_Science_and_Engineering_Project/Project%20Files/Human-Action-Recognition-in-the-dark/notebooks/poseDitection.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/f%3A/CS3501-Data_Science_and_Engineering_Project/Project%20Files/Human-Action-Recognition-in-the-dark/notebooks/poseDitection.ipynb#W0sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmediapipe\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mmp\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/CS3501-Data_Science_and_Engineering_Project/Project%20Files/Human-Action-Recognition-in-the-dark/notebooks/poseDitection.ipynb#W0sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtime\u001b[39;00m \n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/CS3501-Data_Science_and_Engineering_Project/Project%20Files/Human-Action-Recognition-in-the-dark/notebooks/poseDitection.ipynb#W0sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m get_ipython()\u001b[39m.\u001b[39mrun_line_magic(\u001b[39m'\u001b[39m\u001b[39mmatplotlib\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39minline\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'mediapipe'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import cv2\n",
