--- a/notebooks/Another.ipynb
+++ b/notebooks/Another.ipynb
@@ -2,59 +2,12 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "collapsed": true,
         "id": "eBUxmyFAsgw3"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: ultralytics in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (8.0.203)Note: you may need to restart the kernel to use updated packages.\n",
-            "\n",
-            "Requirement already satisfied: matplotlib>=3.3.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (3.8.1)\n",
-            "Requirement already satisfied: numpy>=1.22.2 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (1.24.3)\n",
-            "Requirement already satisfied: opencv-python>=4.6.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (4.8.0.76)\n",
-            "Requirement already satisfied: pillow>=7.1.2 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (10.1.0)\n",
-            "Requirement already satisfied: pyyaml>=5.3.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (6.0.1)\n",
-            "Requirement already satisfied: requests>=2.23.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (2.31.0)\n",
-            "Requirement already satisfied: scipy>=1.4.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (1.11.3)\n",
-            "Requirement already satisfied: torch>=1.8.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (2.1.0)\n",
-            "Requirement already satisfied: torchvision>=0.9.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (0.16.0)\n",
-            "Requirement already satisfied: tqdm>=4.64.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (4.66.1)\n",
-            "Requirement already satisfied: pandas>=1.1.4 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (2.1.2)\n",
-            "Requirement already satisfied: seaborn>=0.11.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (0.13.0)\n",
-            "Requirement already satisfied: psutil in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (5.9.6)\n",
-            "Requirement already satisfied: py-cpuinfo in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (9.0.0)\n",
-            "Requirement already satisfied: thop>=0.1.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from ultralytics) (0.1.1.post2209072238)\n",
-            "Requirement already satisfied: contourpy>=1.0.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from matplotlib>=3.3.0->ultralytics) (1.1.1)\n",
-            "Requirement already satisfied: cycler>=0.10 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from matplotlib>=3.3.0->ultralytics) (0.12.1)\n",
-            "Requirement already satisfied: fonttools>=4.22.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from matplotlib>=3.3.0->ultralytics) (4.43.1)\n",
-            "Requirement already satisfied: kiwisolver>=1.3.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from matplotlib>=3.3.0->ultralytics) (1.4.5)\n",
-            "Requirement already satisfied: packaging>=20.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from matplotlib>=3.3.0->ultralytics) (23.1)\n",
-            "Requirement already satisfied: pyparsing>=2.3.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from matplotlib>=3.3.0->ultralytics) (3.1.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.7 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from matplotlib>=3.3.0->ultralytics) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from pandas>=1.1.4->ultralytics) (2023.3.post1)\n",
-            "Requirement already satisfied: tzdata>=2022.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from pandas>=1.1.4->ultralytics) (2023.3)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from requests>=2.23.0->ultralytics) (3.2.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from requests>=2.23.0->ultralytics) (3.4)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from requests>=2.23.0->ultralytics) (1.26.16)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from requests>=2.23.0->ultralytics) (2023.7.22)\n",
-            "Requirement already satisfied: filelock in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from torch>=1.8.0->ultralytics) (3.13.1)\n",
-            "Requirement already satisfied: typing-extensions in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from torch>=1.8.0->ultralytics) (4.5.0)\n",
-            "Requirement already satisfied: sympy in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from torch>=1.8.0->ultralytics) (1.12)\n",
-            "Requirement already satisfied: networkx in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from torch>=1.8.0->ultralytics) (3.2.1)\n",
-            "Requirement already satisfied: jinja2 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from torch>=1.8.0->ultralytics) (3.1.2)\n",
-            "Requirement already satisfied: fsspec in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from torch>=1.8.0->ultralytics) (2023.10.0)\n",
-            "Requirement already satisfied: colorama in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from tqdm>=4.64.0->ultralytics) (0.4.6)\n",
-            "Requirement already satisfied: six>=1.5 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib>=3.3.0->ultralytics) (1.16.0)\n",
-            "Requirement already satisfied: MarkupSafe>=2.0 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from jinja2->torch>=1.8.0->ultralytics) (2.1.3)\n",
-            "Requirement already satisfied: mpmath>=0.19 in f:\\cs3501-data_science_and_engineering_project\\project files\\human-action-recognition-in-the-dark\\web_interface\\venv\\lib\\site-packages (from sympy->torch>=1.8.0->ultralytics) (1.3.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%pip install ultralytics"
       ]
@@ -70,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "mcufPbH9ySXq"
       },
@@ -95,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "2ly275Y7A49T"
       },
@@ -162,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 26,
       "metadata": {
         "id": "i5YmQPT-tMEn"
       },
@@ -178,18 +131,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 27,
       "metadata": {
         "id": "fCmkyOSc0H9j"
       },
       "outputs": [],
       "source": [
-        "frames_list = frames_extraction('F:\\CS3501-Data_Science_and_Engineering_Project\\Project Files\\Human-Action-Recognition-in-the-dark\\datasets\\clips_v1.5\\Drink\\Drink_1_1.mp4', 3)\n"
+        "frames_list = frames_extraction('F:\\CS3501-Data_Science_and_Engineering_Project\\Project Files\\Human-Action-Recognition-in-the-dark\\datasets\\clips_v1.5\\Drink\\Drink_1_1.mp4', 3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 28,
       "metadata": {
         "id": "-xOpch8E0LyB"
       },
@@ -231,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 29,
       "metadata": {
         "id": "cJ0UaTjkCBdn"
       },
@@ -241,8 +194,8 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "0: 480x640 1 person, 1: 480x640 1 person, 2: 480x640 1 person, 210.0ms\n",
-            "Speed: 3.7ms preprocess, 70.0ms inference, 1.3ms postprocess per image at shape (1, 3, 480, 640)\n"
+            "0: 480x640 1 person, 1: 480x640 1 person, 2: 480x640 1 person, 235.2ms\n",
+            "Speed: 4.3ms preprocess, 78.4ms inference, 1.7ms postprocess per image at shape (1, 3, 480, 640)\n"
           ]
         }
       ],
@@ -331,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {
         "id": "SBlirk3J6g7O"
       },
@@ -342,18 +295,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {
         "id": "e5lZjX5B6uzH"
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "0: 480x640 1 person, 1: 480x640 1 person, 2: 480x640 1 person, 3: 480x640 1 person, 4: 480x640 1 person, 5: 480x640 1 person, 6: 480x640 1 person, 7: 480x640 1 person, 8: 480x640 1 person, 9: 480x640 1 person, 10: 480x640 1 person, 11: 480x640 1 person, 12: 480x640 1 person, 13: 480x640 1 person, 14: 480x640 1 person, 15: 480x640 1 person, 16: 480x640 1 person, 17: 480x640 1 person, 18: 480x640 1 person, 19: 480x640 1 person, 1167.3ms\n",
-            "Speed: 3.0ms preprocess, 58.4ms inference, 0.7ms postprocess per image at shape (1, 3, 480, 640)\n"
+          "ename": "NameError",
+          "evalue": "name 'keypoint_detection' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32mf:\\CS3501-Data_Science_and_Engineering_Project\\Project Files\\Human-Action-Recognition-in-the-dark\\notebooks\\Another.ipynb Cell 17\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/f%3A/CS3501-Data_Science_and_Engineering_Project/Project%20Files/Human-Action-Recognition-in-the-dark/notebooks/Another.ipynb#X22sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m keypoints \u001b[39m=\u001b[39m keypoint_detection(frames_list)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'keypoint_detection' is not defined"
           ]
         }
       ],
